# OxygenBot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Connection_pool.hpp  bot.hpp  catch_exit_signal.hpp  globals.hpp  initialize_database.hpp  parse_cl_arguments.hpp  parse_config.hpp  register_events.hpp  register_roles.hpp  register_slashcommands.hpp  roles.hpp  secret.hpp  shutdown.hpp  spdlog_setup.hpp  start_timer.hpp  welcome_message.hpp
include/commands/: ban.hpp  clear_warns.hpp  commands.hpp  create_muted_role.hpp  delete_messages.hpp  delwarn.hpp  member_info.hpp  mute.hpp  sync_roles.hpp  unban.hpp  unban_id.hpp  unmute.hpp  warn.hpp
include/events/: events.hpp  on_guild_ban_add.hpp  on_guild_ban_remove.hpp  on_guild_role_create.hpp  on_guild_role_delete.hpp  on_guild_role_update.hpp  on_message_create.hpp  on_message_delete.hpp  on_message_delete_bulk.hpp
include/utils/: DB_bind_vector.hpp  DB_buffer_vector.hpp  DB_close_statement.hpp  DB_connect.hpp  DB_create_statement.hpp  DB_exec.hpp  DB_fetch_prepare.hpp  DB_statement.hpp  date_str.hpp  delete_old_messages.hpp  run.hpp  slashcommand.hpp  stod.hpp  time_str.hpp
mysql-schema/: mysql-schema.sql
src/: CMakeLists.txt  catch_exit_signal.cpp  initialize_database.cpp  main.cpp  parse_cl_arguments.cpp  parse_config.cpp  register_events.cpp  register_roles.cpp  register_slashcommands.cpp  secret.cpp  shutdown.cpp  spdlog_setup.cpp  start_timer.cpp  welcome_message.cpp
src/commands/: CMakeLists.txt  ban.cpp  clear_warns.cpp  create_muted_role.cpp  delete_messages.cpp  delwarn.cpp  member_info.cpp  mute.cpp  sync_roles.cpp  unban.cpp  unban_id.cpp  unmute.cpp  warn.cpp
src/events/: on_channel_delete.cpp  on_guild_ban_add.cpp  on_guild_ban_remove.cpp  on_guild_role_create.cpp  on_guild_role_delete.cpp  on_guild_role_update.cpp  on_message_create.cpp  on_message_delete.cpp  on_message_delete_bulk.cpp
src/utils/: CMakeLists.txt  DB_bind_vector.cpp  DB_buffer_vector.cpp  DB_close_statement.cpp  DB_connect.cpp  DB_create_statement.cpp  DB_exec.cpp  DB_fetch_prepare.cpp  DB_statement.cpp  date_str.cpp  delete_old_messages.cpp  run.cpp  slashcommand.cpp  stod.cpp  time_str.cpp
testdata/: config_1  config_10  config_11  config_12  config_2  config_3  config_4  config_5  config_6  config_7  config_8  config_9
tests/: DB_statement_test.cpp  parse_config_test.cpp
